--- a/server/templates/fun_pics.html
+++ b/server/templates/fun_pics.html
@@ -26,7 +26,7 @@ Reddit Image Viewer
 <p>For more details, see <a href="blog/2011/fun-with-reddit-image-posts/">Fun with Reddit Image Data</a>.
 </div>    
 
-<div class="tan_box">
+<div class="tan_box rounded">
 
 <div style="clear:both; float: left;">
 
@@ -37,7 +37,7 @@ Reddit Image Viewer
 </div>
 
 <div style="float:right; text-align: right; padding-top: 5px;">
-    <div style="margin-bottom: 10px;"><a href="javascript:void(0)" class="btn" id="reddit_next">NEXT</a></div>
+    <div style="margin-bottom: 5px;"><a href="javascript:void(0)" class="btn primary large" id="reddit_next">NEXT</a></div>
     <div><input type="checkbox" name="nsfw" value="1" onclick="fun_pics.toggleNsfw(this)"/> NSFW</div>
     <div id ="reddit_num_results"></div>
 </div>
