--- a/server/templates/reddit_blaster.html
+++ b/server/templates/reddit_blaster.html
@@ -12,16 +12,13 @@ Reddit Blaster
 
 {% block content %}    
 <div style="font-size: 14px;">
-<p>An example of media_flow.js applied to images from <a href="http://www.reddit.com">reddit</a>.
+<p>An example of <a href="/js/media_flow.js">media_flow.js</a> applied to images from <a href="http://www.reddit.com">reddit</a>.
 
-    <div id="reddit_blaster"></div>
+    <div id="reddit_blaster" class="tan_box rounded" style="width: 958px; height: 710px; padding: 0px; margin-bottom: 30px;"></div>
 
-    <!-- push footer down -->
-    <div style="padding-top: 700px;"></div>
-    
     <div>
         
-        <span><a href="javascript:void(0)" class="btn" id="playBtn">PAUSE</a></span>
+        <span><a href="javascript:void(0)" class="btn primary large" id="playBtn">PAUSE</a></span>
     
         <span style="margin-left: 100px;">
         
