reddit blaster fixes

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -13,7 +13,7 @@
 <div id="intro">
 <p><span>Welcome to my site</span>
 <p>My name is Joshua Seims, and I live in San Francisco.
-<p>I'm a hacker, entrepreneur, and an occasional angel investor.
+<p>I'm a hacker, entrepreneur, and angel investor.
 <p>I love building products that tease interesting patterns out of the world, and creating novel user experiences.
 <p>Looking for help on your project?  Then get in touch.  I particularly enjoy advising early stage startups.
 
@@ -24,7 +24,7 @@
 <div id="box_left">
 <h3>Projects</h3>
 
-Here's a small sampling of some things I've done:
+Here's a sampling of some recent side projects:
 
 <ul class="normal_list">
     <li><a href="video_wall">Video Wall</a>.  Get YouTube's top 1000 videos of all time blasted into your eyeballs.</li>
