--- a/server/templates/reddit_blaster.html
+++ b/server/templates/reddit_blaster.html
@@ -7,7 +7,8 @@ Reddit Blaster
 {% block js_includes %}
 <script type="text/javascript" src="/js/jquery.lightbox_me.js"></script>
 <script src="/js/media_flow.js?1"></script>
-<script src="/js/reddit_blaster.js"></script>
+<script src="/js/reddit_blaster.js?3"></script>
+
 {% endblock %}
 
 {% block content %}    
@@ -23,35 +24,12 @@ Reddit Blaster
         <span style="margin-left: 100px;">
         
         <!-- <input type="text" name="subreddit" id="subreddit" placeholder="Subreddit" title="Fill in a subreddit and press enter!"></span> -->
-            Subreddit:  <select id="subreddit">    
-                            <option value="all">all</option>
-                            <option value="AdviceAnimals">AdviceAnimals</option>
-                            <option value="atheism">atheism</option>
-                            <option value="aww">aww</option>
-                            <option value="battlefield3">battlefield3</option>
-                            <option value="EarthPorn">EarthPorn</option>
-                            <option value="fffffffuuuuuuuuuuuu">fffffffuuuuuuuuuuuu</option>
-                            <option value="funny">funny</option>
-                            <option value="gaming">gaming</option>
-                            <option value="gifs">gifs</option>
-                            <option value="gonewild">gonewild</option>
-                            <option value="LadyBoners">LadyBoners</option>
-                            <option value="Minecraft">Minecraft</option>
-                            <option value="mylittlepony">mylittlepony</option>
-                            <option value="nsfw">nsfw</option>
-                            <option value="pics">pics</option>
-                            <option value="randomsexiness">randomsexiness</option>
-                            <option value="reddit.com">reddit.com</option>
-                            <option value="skyrim">skyrim</option>
-                            <option value="starcraft">starcraft</option>
-                            <option value="teen_girls">teen_girls</option>
-                            <option value="tf2">tf2</option>
-                            <option value="trees">trees</option>
-                            <option value="WTF">WTF</option>
+            Subreddit:  <select id="subreddit"> 
+                {% for subreddit in subreddit_info.list %}
+                            <option value="{{subreddit}}" {% if subreddit == start_subreddit %} selected="selected" {% endif %}>{{subreddit}}</option>
+                {% endfor %}
                         </select>
         </span>
-    
-        <span style="margin-left: 50px;"><input type="checkbox" name="nsfw" value="1" onclick="reddit_blaster.toggleNsfw(this)"/> NSFW</span>
     
         <span id="resultCount" style="float: right;"></span>
     
@@ -66,3 +44,9 @@ Reddit Blaster
     
 {% endblock %}
 
+{% block js_body %}
+<script type="text/javascript">
+    reddit_blaster.setOver18({{subreddit_info.nsfw}});
+    reddit_blaster.setSubredditFilter("{{start_subreddit}}");
+</script>
+{% endblock %}
