converting to media flow plugin version

--- a/server/templates/facebook_blaster.html
+++ b/server/templates/facebook_blaster.html
@@ -6,8 +6,8 @@ Facebook Blaster
 
 {% block js_includes %}
 <script type="text/javascript" src="/js/jquery.lightbox_me.js"></script>
-<script src="/js/facebook_blaster.js"></script>
-<script src="/js/media_flow.js?1"></script>
+<script src="/js/facebook_blaster.js?1"></script>
+<script src="https://raw.github.com/jseims/media_flow/master/js/media_flow.js"></script>
 {% endblock %}
 
 {% block facebook_body %}
