--- a/server/templates/reddit_blaster.html
+++ b/server/templates/reddit_blaster.html
@@ -6,8 +6,8 @@ Reddit Blaster
 
 {% block js_includes %}
 <script type="text/javascript" src="/js/jquery.lightbox_me.js"></script>
-<script src="/js/media_flow.js?1"></script>
-<script src="/js/reddit_blaster.js?3"></script>
+<script src="https://raw.github.com/jseims/media_flow/master/js/media_flow.js"></script>
+<script src="/js/reddit_blaster.js?4"></script>
 
 {% endblock %}
 
