added more projects

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -62,7 +62,11 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 
 <li><a href="projects">Projects</a>
 <ul class="sub_menu">
-    <li><a href="video_wall">Video Wall</a>
+    <li><a href="http://www.modernsocial.com">ModernSocial</a></li>
+    <li><a href="https://github.com/jseims/media_flow">media_flow.js</a></li>
+    <li><a href="http://www.whimsi.com">Whimsi</a></li>
+    <li><a href="facebook_blaster">FaceBook Blaster</a></li>
+    <li><a href="reddit_blaster">Reddit Blaster</a>    <li><a href="video_wall">Video Wall</a></li>
     <li><a href="/blog/im-almost-there/">I'm Almost There</a></li>
     <li><a href="fun_pics">Reddit Image Viewer</a></li>
 </ul>
