--- a/server/templates/facebook_blaster.html
+++ b/server/templates/facebook_blaster.html
@@ -54,7 +54,7 @@ Facebook Blaster
 
 
 
-<p>An example of <a href="/js/media_flow.js">media_flow.js</a> applied to FaceBook photos.
+<p>An example of <a href="https://github.com/jseims/media_flow">media_flow.js</a> applied to FaceBook photos.
 
     <div id="facebook_blaster" class="tan_box rounded" style="width: 958px; height: 600px; padding: 0px; margin-bottom: 30px;">
         <div style="margin-top: 280px; margin-left: 373px;" id="blastBtnDiv">
