--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -27,9 +27,11 @@
 Here's a sampling of some recent side projects:
 
 <ul class="normal_list">
+    <li><a href="http://www.modernsocial.com">ModernSocial</a>, a conversation platform.  Users can request/offer help on various topics, and the site manages a flow between users that lets members call one another without revealing private phone numbers (via Twilio) or engange in live video chats (via TokBox).</li>
+    <li><a href="https://github.com/jseims/media_flow">media_flow.js</a>.  A jQuery plugin for creating a continuous flow of elements in a browser. This effect can work well when browsing a large collection of visual data.</li>
+    <li><a href="http://www.whimsi.com">Whimsi</a>, a high-end fashion e-commerce site that uses media_flow.js for presentation.</li>
+    <li><a href="facebook_blaster">FaceBook Blaster</a>.  See a continuous flow of photos from your FaceBook feed.  Uses media_flow.js.</li>
     <li><a href="video_wall">Video Wall</a>.  Get YouTube's top 1000 videos of all time blasted into your eyeballs.</li>
-    <li><a href="/blog/im-almost-there/">I'm Almost There</a>.  An iPhone app that shows people where you are on a map as you're running late (or, conversely, get them to show you where they are as you're waiting for them).</li>
-    <li><a href="fun_pics">Reddit Image Viewer</a>.  Easily view pictures added to Reddit as a nearly infinite stream.  Also, share this stream with your friends.</li>
 </ul>    
 </p>
 <p>
