--- a/server/templates/reddit_blaster.html
+++ b/server/templates/reddit_blaster.html
@@ -6,14 +6,14 @@ Reddit Blaster
 
 {% block js_includes %}
 <script type="text/javascript" src="/js/jquery.lightbox_me.js"></script>
-<script src="https://raw.github.com/jseims/media_flow/master/js/media_flow.js"></script>
-<script src="/js/reddit_blaster.js?4"></script>
+<script src="https://raw.github.com/jseims/media_flow/master/js/media_flow.js?1"></script>
+<script src="/js/reddit_blaster.js?6"></script>
 
 {% endblock %}
 
 {% block content %}    
 <div style="font-size: 14px;">
-<p>An example of <a href="/js/media_flow.js">media_flow.js</a> applied to images from <a href="http://www.reddit.com">reddit</a>.
+<p>An example of <a href="https://github.com/jseims/media_flow">media_flow.js</a> applied to images from <a href="http://www.reddit.com">reddit</a>.
 
     <div id="reddit_blaster" class="tan_box rounded" style="width: 958px; height: 690px; padding: 0px; margin-bottom: 30px;"></div>
 
