--- a/server/templates/contact.html
+++ b/server/templates/contact.html
@@ -15,6 +15,7 @@ Contact
 <li><a href="http://www.linkedin.com/profile/view?id=5878758&trk=tab_pro">LinkedIn</a></li>
 <li><a href="http://twitter.com/#!/jseims">Twitter</a></li>
 <li><a href="http://www.quora.com/Joshua-Seims">Quora</a></li>
+<li><a href="https://angel.co/jseims">Angel List</a></li>
 <li><a href="https://github.com/jseims">GitHub</a></li>
 </ul>
 
