--- a/server/templates/projects.html
+++ b/server/templates/projects.html
@@ -9,54 +9,18 @@ Projects
 
 <h1>Projects</h1> 
 
-<p>
-Here's a small sampling of some things I've done:
-</p>
+Here's a sampling of some recent side projects:
 
-<div id="project">
-
-  <div id="project_img">
-    <a href="video_wall"><img src="images/flow_mode.png" style="border:1px solid #dcdcdc;"></a>
-  </div>
-  
-  <div id="project_text">
-    <p><span><a href="video_wall">Video Wall</a></span>
-    <p>I created a special video player that blasts a continuous stream of random moments of videos at you.
-    <p>For this demo, I loaded up the player with YouTube's top 1000 videos of all time.
-    <p><a href="video_wall"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
-  </div>
-
-</div>
-
-<div id="project">
-
-  <div id="project_img">
-    <a href="/blog/im-almost-there/"><img src="images/almost_there.png"></a>
-  </div>
-  
-  <div id="project_text">
-    <p><span><a href="/blog/im-almost-there/">I'm Almost There</a></span>
-    <p>Lucas Ryan and I wrote this iPhone app last year.
-    <p>The app sends a text message that links to a web page showing people where you are on a map.
-    <p><a href="/blog/im-almost-there/"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
-  </div>
-
-</div>
-
-<div id="project">
-
-  <div id="project_img">
-    <a href="fun_pics"><img src="images/reddit-alien.jpg" style="border:1px solid #dcdcdc;"></a>
-  </div>
-  
-  <div id="project_text">
-    <p><span><a href="fun_pics">Reddit Image Viewer</a></span>
-    <p>Reddit gets thousands of images posted every day.
-    <p>This app lets you  view pictures these pictures in a way that's fun, easy, and social.
-    <p><a href="fun_pics"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
-  </div>
-
-</div>
+<ul class="normal_list">
+    <li><a href="http://www.modernsocial.com">ModernSocial</a>, a conversation platform.  Users can request/offer help on various topics, and the site manages a flow between users that lets members call one another without revealing private phone numbers (via Twilio) or engange in live video chats (via TokBox).</li>
+    <li><a href="https://github.com/jseims/media_flow">media_flow.js</a>.  A jQuery plugin for creating a continuous flow of elements in a browser. This effect can work well when browsing a large collection of visual data.</li>
+    <li><a href="http://www.whimsi.com">Whimsi</a>, a high-end fashion e-commerce site that uses media_flow.js for presentation.</li>
+    <li><a href="facebook_blaster">FaceBook Blaster</a>.  See a continuous flow of photos from your FaceBook feed.  Uses media_flow.js.</li>
+    <li><a href="reddit_blaster">Reddit Blaster</a>.  See a continuous flow of photos posted to Reddit.  Uses media_flow.js.</li>
+    <li><a href="video_wall">Video Wall</a>.  Get YouTube's top 1000 videos of all time blasted into your eyeballs.</li>
+    <li><a href="/blog/im-almost-there/">I'm Almost There</a>.  An iPhone app that shows people where you are on a map as you're running late (or, conversely, get them to show you where they are as you're waiting for them).</li>
+    <li><a href="fun_pics">Reddit Image Viewer</a>.  Easily view pictures added to Reddit as a nearly infinite stream.  Also, share this stream with your friends.</li>
+</ul>    
                   
 </div><!-- end content -->
 
