change modernsocial to kondit

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -62,7 +62,7 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 
 <li><a href="projects">Projects</a>
 <ul class="sub_menu">
-    <li><a href="http://www.modernsocial.com">ModernSocial</a></li>
+    <li><a href="http://www.kondit.com">Kondit</a></li>
     <li><a href="https://github.com/jseims/media_flow">media_flow.js</a></li>
     <li><a href="http://www.whimsi.com">Whimsi</a></li>
     <li><a href="facebook_blaster">FaceBook Blaster</a></li>
