--- a/server/templates/projects.html
+++ b/server/templates/projects.html
@@ -12,7 +12,7 @@ Projects
 Here's a sampling of some recent side projects:
 
 <ul class="normal_list">
-    <li><a href="http://www.modernsocial.com">ModernSocial</a>, a conversation platform.  Users can request/offer help on various topics, and the site manages a flow between users that lets members call one another without revealing private phone numbers (via Twilio) or engange in live video chats (via TokBox).</li>
+    <li><a href="http://www.kondit.com">Kondit</a>, a conversation platform.  Users can request/offer help on various topics, and the site manages a flow between users that lets members call one another without revealing private phone numbers (via Twilio) or engange in live video chats (via TokBox).</li>
     <li><a href="https://github.com/jseims/media_flow">media_flow.js</a>.  A jQuery plugin for creating a continuous flow of elements in a browser. This effect can work well when browsing a large collection of visual data.</li>
     <li><a href="http://www.whimsi.com">Whimsi</a>, a high-end fashion e-commerce site that uses media_flow.js for presentation.</li>
     <li><a href="facebook_blaster">FaceBook Blaster</a>.  See a continuous flow of photos from your FaceBook feed.  Uses media_flow.js.</li>
