--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -11,35 +11,16 @@
  
  
 <div id="intro">
-<p><span>Welcome to my site</span>
-<p>My name is Joshua Seims, and I live in San Francisco.
+<p><span>Joshua Seims &mdash; CEO of <a href="https://api.trustedcoin.com">TrustedCoin</a></span>
 <p>I'm a hacker, entrepreneur, and angel investor.
-<p>I love building products that tease interesting patterns out of the world, and creating novel user experiences.
-<p>Looking for help on your project?  Then get in touch.  I particularly enjoy advising early stage startups.
+<p>Currently, I'm working in the Bitcoin space with my brilliant friend, Lucas Ryan.  We run a transaction cosigning service, which I find delightfully abstract.
+<p>I live in San Francisco.
 
 </div>
 
 <div style="clear:both;"></div>
 
-<div id="box_left">
-<h3>Projects</h3>
-
-Here's a sampling of some recent side projects:
-
-<ul class="normal_list">
-    <li><a href="http://www.kondit.com">Kondit</a>, a conversation platform.  Users can request/offer help on various topics, and the site manages a flow between users that lets members call one another without revealing private phone numbers (via Twilio) or engange in live video chats (via TokBox).</li>
-    <li><a href="https://github.com/jseims/media_flow">media_flow.js</a>.  A jQuery plugin for creating a continuous flow of elements in a browser. This effect can work well when browsing a large collection of visual data.</li>
-    <li><a href="http://www.whimsi.com">Whimsi</a>, a high-end fashion e-commerce site that uses media_flow.js for presentation.</li>
-    <li><a href="facebook_blaster">FaceBook Blaster</a>.  See a continuous flow of photos from your FaceBook feed.  Uses media_flow.js.</li>
-    <li><a href="video_wall">Video Wall</a>.  Get YouTube's top 1000 videos of all time blasted into your eyeballs.</li>
-</ul>    
-</p>
-<p>
-
-<a href="projects"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
-</div>
-
-<div id="box_right">
+<div id="box_full">
 <h3>Recent Posts</h3>
 
 <ul class="normal_list">
@@ -52,17 +33,5 @@ Here's a sampling of some recent side projects:
 <a href="blog"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
 </div>
 
-<div id="box_middle">
-<h3>Collaborate</h3>
-<p>Creating a startup is an exhilarating experience.  I know, I've done it, and I've made almost every mistake in the process.  
-
-<p>But I got enough things right to bootstrap a new business and grow it organically to over $20 million in annual revenue.
-
-<p>
-I enjoy helping people who are passionate about an idea and willing to knock down any obstacle to make their vision a reality.
-
-<p>
-<a href="collaborate"><img src="images/more.png" class="more" width="68" height="24" alt="more" /></a>
-</div>
 {% endblock %}
 
