--- a/web/css/style.css
+++ b/web/css/style.css
@@ -176,11 +176,13 @@ body {width: 960px; margin: auto; font-family: Georgia, "Times New Roman", Times
 
 #intro p {padding-top: 10px; padding-bottom: 10px;}
 
+#box_full {margin-bottom: 44px; text-align: justify}
+
 #box_left {width: 300px; float: left; margin-bottom: 44px; text-align: justify}
 #box_right {width: 300px; float: right; margin-bottom: 44px; text-align: justify}
 #box_middle {margin-left: 330px; margin-right: 330px; margin-bottom: 44px; text-align: justify}
 
-#box_left h3, #box_right h3, #box_middle h3 {
+#box_left h3, #box_right h3, #box_middle h3, #box_full h3 {
 	background: #eaeaea;
 	font-weight: normal;
 	margin-bottom: 25px;
@@ -213,7 +215,7 @@ p {line-height: 1.4em; padding-bottom: 25px}
 
 /* images */
 
-.more {float: right; margin-right: 10px}
+.more {margin-left: 28px}
 
 
 /*------------------ gallery ------------------*/
