added trustedcoin wallet

--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -62,6 +62,7 @@ $("ul.dropdown li ul li:has(ul)").find("a:first").append(" &raquo; ");
 
 <li><a href="projects">Projects</a>
 <ul class="sub_menu">
+    <li><a href="https://github.com/jseims/trustedcoin-web-wallet">Secure Bitcoin Wallet</a></li>
     <li><a href="http://www.kondit.com">Kondit</a></li>
     <li><a href="https://github.com/jseims/media_flow">media_flow.js</a></li>
     <li><a href="http://www.whimsi.com">Whimsi</a></li>
