--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -11,7 +11,7 @@
  
  
 <div id="intro">
-<p><span>Joshua Seims &mdash; CEO of <a href="https://api.trustedcoin.com">TrustedCoin</a></span>
+<p><span>Joshua Seims &mdash; Founder of <a href="https://api.trustedcoin.com">TrustedCoin</a></span>
 <p>I'm a hacker, entrepreneur, and angel investor.
 <p>Currently, I'm working in the Bitcoin space with my brilliant friend, Lucas Ryan.  We run a transaction cosigning service, which I find delightfully abstract.
 <p>I live in San Francisco.
